--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RevoTale/@revotale/daisyui-react.git"
+    "url": "git+https://github.com/RevoTale/daisyui-react.git"
   },
   "bugs": {
     "url": "https://github.com/RevoTale/next-scroll-restorer/issues"
